Feat: add auto-complete and search history with saved state for SearchFragmentTest